<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_in"
        android:orderInCategory="100"
        android:title="@string/sign_in"
        app:showAsAction="never" />
    <item
        android:id="@+id/contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/notification"
        android:title="Notification"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="always" />

    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>
