<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diemsct.AcdFE">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fe1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:text="Year of Establishment -2009"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:text="Courses"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Vision"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />


            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fe2"
                android:textColor="@color/Black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Mission"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fe3"
                android:textColor="@color/Black"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
